fix navbar on mobile

--- a/one.css
+++ b/one.css
@@ -301,11 +301,11 @@ footer {
     }
 
     .nav-menu li {
-        margin: 1.5rem 0;
+        margin: 1rem 0;
     }
     
     .nav-menu a {
-        font-size: 1.5rem; 
+        font-size: 1.2rem; 
     }
 
     
